adds correct builder (but request still doesn't work)